[tool.poetry]
name = "csspy"
version = "0.1.0"
description = ""
authors = ["John McLevey <john.mclevey@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.0"
mesa = "^2.3.1"
nbclient = "^0.10.0"
networkx = "^3.3"
pandas = "^2.2.2"
pdpp = "^0.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
